--- a/notes/notes_topics/notes_pages/polymers_materials_notes.html
+++ b/notes/notes_topics/notes_pages/polymers_materials_notes.html
@@ -255,7 +255,7 @@
                     <h2><hr>Thermosetting plastics<hr></h2>
                 </div>
 
-                <h3><u><b>Aluminium:</b></u></h3>
+                <h3><u><b>Epoxy resin:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -264,24 +264,22 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Lightweight</li>
                                 <li>Corrosion resistant</li>
-                                <li>Good conductor of electricity</li>
-                                <li>Malleable</li>
+                                <li>Electrical insulator</li>
+                                <li>Good bond qualities</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Cracks under stress</li>
-                                <li>Needs annealing when worked</li>
-                                <li>Does not withstand great loads</li>
+                                <li>Causes health issues/toxic fumes</li>
+                                <li>Brittle</li>
                             </ul>
                         </td>
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Aircraft, Engine parts, Utensils, Tins<br><br><br><br></h3>
+                <h3><b>Uses: </b>Adhesives, paints and coatings, electronics<br><br><br><br></h3>
 
-                <h3><u><b>Copper:</b></u></h3>
+                <h3><u><b>Urea formaldehyde:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -290,25 +288,23 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Good heat and electrical conductor</li>
-                                <li>Ductile</li>
-                                <li>Malleable</li>
-                                <li>Soft</li>
+                                <li>Strong</li>
+                                <li>Hard</li>
+                                <li>Heat resistant</li>
+                                <li>Good electrical insulator</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Needs annealing when worked</li>
-                                <li>Danger of electrolysis when in contact with water</li>
-                                <li>Corrodes easily</li>
-                                <li>Expensive</li>
+                                <li>Can emit toxic vapours during manufacture</li>
+                                <li>Brittle</li>
                             </ul>
                         </td>                        
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Electrical cables, Circuits, Generators, Heating<br><br><br><br></h3>
+                <h3><b>Uses: </b>Electrical fittings, handles, control knobs, domestic appliance components<br><br><br><br></h3>
 
-                <h3><u><b>Zinc:</b></u></h3>
+                <h3><u><b>Polyester resin:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -317,55 +313,28 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Corrosion resistant</li>
-                                <li>Self-healing</li>
-                                <li>Recyclable</li>
-                                <li>Durable</li>
+                                <li>Good electrical insulator</li>
+                                <li>Heat resistant</li>
+                                <li>Hard</li>
+                                <li>COst effective</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
-                                <li>Low toughness</li>
-                                <li>Brittle when worked</li>
-                                <li>May corrode when in contact with water/moisture for a long time</li>
+                                <li>Short shelf life</li>
+                                <li>Emissions are harmful</li>
+                                <li>Brittle unless treated</li>
                             </ul>                            
                         </td>                        
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Roofing, Castings, Batteries<br><br><br><br></h3>
-
-                <h3><u><b>Tin:</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td class="notes-table-data-pro">
-                            <ul>
-                                <li>Malleable</li>
-                                <li>Ductile</li>
-                                <li>Corrosion resistant</li>
-                            </ul>
-                        </td>
-                        <td class="notes-table-data-con">
-                            <ul>
-                                <li>Hard to recycle</li>
-                                <li>Not very strong</li>
-                            </ul>                            
-                        </td>                        
-                    </tr>
-                </table>
-                <h3><b>Uses: </b>Furniture, Construction, Exterior furniture, Veneers<br><br><br><br></h3>
+                <h3><b>Uses: </b>Glass reinforced boats and cars, garden furniture, castings<br><br><br><br></h3>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Alloys<hr></h2>
-                </div>
-                <div>
-                    <p>Alloys are made by combining two or more metallic elements, to give improved properties such as greater strength or resistance to corrosion.</p>
+                    <h2><hr>Elastomers<hr></h2>
                 </div>
 
-                <h3><u><b>Stainless Steel (Chromium, Nickel, Steel):</b></u></h3>
+                <h3><u><b>Rubber:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -374,79 +343,22 @@
                     <tr>
                         <td class="notes-table-data-pro">
                             <ul>
-                                <li>Corrosion resistant</li>
-                                <li>Heat resistant</li>
-                                <li>Can be recycled</li>
-                                <li>Good strength to weight ratio</li>
-                                <li>Hygenic/non-toxic</li>
+                                <li>Waterproof</li>
+                                <li>Elasticity</li>
+                                <li>Good electrical insulator</li>
+                                <li>Shock absorbent</li>
                             </ul>
                         </td>
                         <td class="notes-table-data-con">
                             <ul>
                                 <li>Expensive</li>
-                                <li>Hard to machine</li>
+                                <li>Can be disfigured</li>
+                                <li>Slow and time consuming to produce</li>
                             </ul>                            
                         </td>                        
                     </tr>
                 </table>
-                <h3><b>Uses: </b>Kitchen utensils, Medical tools, Construction<br><br><br><br></h3>
-
-                <h3><u><b>Duralumin (Aluminium, Copper, Manganese):</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td class="notes-table-data-pro">
-                            <ul>
-                                <li>Lightweight</li>
-                                <li>Strong</li>
-                                <li>Casts well</li>
-                                <li>Tough/hard</li>
-                            </ul>
-                        </td>
-                        <td class="notes-table-data-con">
-                            <ul>
-                                <li>Not corrosion resistant</li>
-                                <li>Brittle</li>
-                            </ul>                            
-                        </td>                        
-                    </tr>
-                </table>
-                <h3><b>Uses: </b>Aviation industry, Automobile industry, Pipelines<br><br><br><br></h3>
-
-                <h3><u><b>Brass (Copper, Zinc):</b></u></h3>
-                <table>
-                    <tr class="notes-table-header">
-                        <th>Advantages</th>
-                        <th>Disadvantages</th>
-                    </tr>
-                    <tr>
-                        <td class="notes-table-data-pro">
-                            <ul>
-                                <li>Casts well</li>
-                                <li>Easy to machine</li>
-                                <li>Good conductor of heat and electricity</li>
-                                <li>Low friction coefficent</li>
-                            </ul>
-                        </td>
-                        <td class="notes-table-data-con">
-                            <ul>
-                                <li>Susceptible to cracking when cold worked</li>
-                                <li>Needs to be constantly annealed</li>
-                                <li>Not very corrosion resistant</li>
-                            </ul>                            
-                        </td>                        
-                    </tr>
-                </table>
-                <h3><b>Uses: </b>Ship propellers, Electrical components, Locks, Gears<br><br><br><br></h3>
-
-                <div class="download-page">
-                    <h3>Get a copy of this page:
-                        <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Materials - Woods</a>
-                    </h3>
-                </div>
+                <h3><b>Uses: </b>Car tires, matting/flooring, medical gloves<br><br><br><br></h3>
             </div>
         </div>
 
