--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -267,7 +267,7 @@
                     
                 </div>
                 <h3><b>Question 2)</b></h3>
-                <p>The manufacturer of engine has three quality control checks to perform. Given that 50,000 parts are made in a day. How many parts fail in a working week. A part fails the quality control cehck if all 3 tests fail together. </p>
+                <p>The manufacturer of engine has three quality control checks to perform. Given that 50,000 parts are made in a day. How many parts fail in a working week. A part fails the quality control check if all 3 tests fail together. </p>
                 <ul>
                     <li>Probability of test A failing = 0.01</li>
                     <li>Probability of test B failing = 0.03</li>
