--- a/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
+++ b/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
@@ -89,7 +89,11 @@
                         <li>Post Modernism</li>
                         <li>Streamlining</li>
                         <li>Memphis</li>
-                    </ul><br><br>
+                    </ul>
+                </div>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
                 </div>
 
                 <h3><b><u>Arts & Crafts (William Morris):</b></u></h3>
@@ -117,7 +121,11 @@
                     <li>Reaction to loss of traditional skills</li>
                 </ul>
 
-                <h3><b>Example: </b>The Red House<br><br><br><br></h3>
+                <h3><b>Example: </b>The Red House</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <h3><b><u>Art Nouveau (Charles Rennie Mackintosh):</b></u></h3>
                 <ul style="font-size: medium;">
