--- a/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
+++ b/notes/notes_topics/FactorsInfluencingTheDevelopmentOfProducts.html
@@ -107,7 +107,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/designinfluences.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\5. Factors influencing the development of products\DTBase_DesignInfluences_MethodsFigures.pdf">Design Influences Methods and Figures</a>
+                            <a href="notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html">Design Influences Methods and Figures</a>
                         </div>
                     </div>
                 </div>
