--- a/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
+++ b/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
@@ -74,8 +74,8 @@
         </header>
 
         <div class="notes-content-wrapper">
-            <div class="notes-content-header" style="background-image:url(../../../images/matnote2.jpg)" title="metal background">
-                <h1 style="color:white"><u><b>Design Theory</b></u></h1>
+            <div class="notes-content-header" style="background-image:url(../../../images/portfolio5.jpg)" title="metal background">
+                <h1 style="color:black"><u><b>Design Theory</b></u></h1>
             </div>
 
             <div class="notes-content">
