--- a/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
+++ b/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
@@ -146,7 +146,11 @@
                     <li>Studied at the Glasgow School of Art</li>
                 </ul>
 
-                <h3><b>Example: </b>Glasgow School of Art<br><br><br><br></h3>
+                <h3><b>Example: </b>Glasgow School of Art</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <h3><b><u>Bauhaus Modernist (Marianna Brandt):</b></u></h3>
                 <ul style="font-size: medium;">
@@ -172,7 +176,11 @@
                     <li>Peaked during the 1920s</li>
                 </ul>
 
-                <h3><b>Example: </b>Wassily chair<br><br><br><br></h3>
+                <h3><b>Example: </b>Wassily chair</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <h3><b><u>Art Deco (Eileen Gray):</b></u></h3>
                 <ul style="font-size: medium;">
@@ -199,7 +207,11 @@
                     <li>Reaction to loss of traditional skills</li>
                 </ul>
 
-                <h3><b>Example: </b>The Red House<br><br><br><br></h3>
+                <h3><b>Example: </b>The Red House</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <h3><b><u>Arts & Crafts (William Morris):</b></u></h3>
                 <ul style="font-size: medium;">
@@ -226,7 +238,11 @@
                     <li>Reaction to loss of traditional skills</li>
                 </ul>
 
-                <h3><b>Example: </b>The Red House<br><br><br><br></h3>
+                <h3><b>Example: </b>The Red House</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <h3><b><u>Arts & Crafts (William Morris):</b></u></h3>
                 <ul style="font-size: medium;">
@@ -253,7 +269,11 @@
                     <li>Reaction to loss of traditional skills</li>
                 </ul>
 
-                <h3><b>Example: </b>The Red House<br><br><br><br></h3>
+                <h3><b>Example: </b>The Red House</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
+                </div>
 
                 <div class="download-page">
                     <h3>Get a copy of this page:
