Design era draft 1 done

--- a/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
+++ b/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
@@ -112,7 +112,7 @@
                     <li>UK origins</li>
                     <li>Reaction to loss of traditional skills</li>
                 </ul>
-                <h3>Art Deco figure - <b>William Morris</b>:</h3>
+                <h3>Art & Crafts figure - <b>William Morris</b>:</h3>
                 <ul style="font-size: medium;">
                     <li>Fitness for purpose</li>
                     <li>Honesty in design</li>
@@ -186,100 +186,128 @@
                 <ul style="font-size: medium;">
                     <li>1925-1939</li>
                     <li>Originated in France</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>Opulent/expensive looking</li>
+                    <li>Reaction to post-war austerity</li>
+                    <li>Growth of mass production</li>
+                    <li>Mass production/machine made</li>
+                    <li>New materials/modern materials used for the first time</li>
                 </ul>
                 <h3>Design style:</h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>Colourful</li>
+                    <li>Sunbursts</li>
+                    <li>Inlays in wood</li>
+                    <li>Zig zags</li>
+                    <li>Geometric shapes</li>
+                    <li>Symmetry and repeating patterns</li>
+                    <li>Ancient Egypt/Aztec influences</li>
                 </ul>
-                <h3>Art Deco figure - <b>William Morris</b>:</h3>
+                <h3>Art Deco figure - <b>Eileen Gray</b>:</h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>1878-1976</li>
+                    <li>Famous for Bibendum chair/Dragon chair</li>
                 </ul>
 
-                <h3><b>Example: </b>The Red House</h3>
+                <h3><b>Example: </b>Empire State building</h3>
 
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Arts & Crafts (William Morris):</b></u></h3>
+                <h3><b><u>Post Modernism (Philippe Starck):</b></u></h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>1975 to present day</li>
+                    <li>All over the world it has a specific name</li>
+                    <li>"Less is a bore"</li>
+                    <li>Designs are quirky/individual/have character</li>
+                    <li>Designs have personality</li>
+                    <li>Reaction against functionality of modernism</li>
+                    <li>Controlled chaos</li>
                 </ul>
                 <h3>Design style:</h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>Distorted shapes</li>
+                    <li>Curvy/linear forms</li>
+                    <li>Assymetrical construction</li>
+                    <li>Expensive</li>
+                    <li>Range of materials used and used in creative ways</li>
+                    <li>Bright/colourful</li>
+                    <li>Taking ideas from the past</li>
                 </ul>
-                <h3>Art Deco figure - <b>William Morris</b>:</h3>
+                <h3>Post Modernism figure - <b>Philippe Starck</b>:</h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>Career started in the 1980s</li>
+                    <li>Worked for Alessi design company</li>
+                    <li>Playful designs</li>
+                    <li>Experimental design</li>
+                    <li>Created Juicy Salif</li>
                 </ul>
 
-                <h3><b>Example: </b>The Red House</h3>
+                <h3><b>Example: </b>Juicy Salif</h3>
 
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Arts & Crafts (William Morris):</b></u></h3>
+                <h3><b><u>Streamlining (Raymond Lowey):</b></u></h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>1935 - 1955</li>
+                    <li>Started in the USA</li>
+                    <li>Consumerism and style</li>
+                    <li>New prosperity and wider consumer choice</li>
+                    <li>Celebrating speed and efficiency</li>
                 </ul>
                 <h3>Design style:</h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>Aerodynamic shapes</li>
+                    <li>Teardrop shape</li>
+                    <li>Futuristic inspiration</li>
+                    <li>Mass production</li>
+                    <li>New machinery used</li>
                 </ul>
-                <h3>Art Deco figure - <b>William Morris</b>:</h3>
+                <h3>Streamlining figure - <b>Raymond Lowey</b>:</h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>Worked on designs from 1910 - 1980</li>
+                    <li>Streamlined trains for the Pennsylvania railroad</li>
                 </ul>
 
-                <h3><b>Example: </b>The Red House</h3>
+                <h3><b>Example: </b>Volkswagen Beatle</h3>
 
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
 
-                <div class="download-page">
-                    <h3>Get a copy of this page:
-                        <a href="..\..\..\documents\1. Materials\DTBase_Materials_Woods.pdf">Materials - Woods</a>
-                    </h3>
+                <h3><b><u>Memphis (Ettore Scotsass):</b></u></h3>
+                <ul style="font-size: medium;">
+                    <li>1981 - 1988</li>
+                    <li>Originated in Italy</li>
+                    <li>Reaction to functional modernism</li>
+                    <li>Form over function</li>
+                </ul>
+                <h3>Design style:</h3>
+                <ul style="font-size: medium;">
+                    <li>Silly & Eccentric</li>
+                    <li>Bold/vibrant</li>
+                    <li>'Retro design' (Carlton bookcase has Aztec shapes)</li>
+                    <li>Distorted shapes</li>
+                    <li>Promotes use of plastic</li>
+                    <li>Avoids 'natural' materials</li>
+
+                </ul>
+                <h3>Memphis figure - <b>Ettore Scotsass</b>:</h3>
+                <ul style="font-size: medium;">
+                    <li>Worked 1980 - 1990 on Memphis</li>
+                    <li>Designed before and after but in different styles</li>
+                    <li>Worked on furniture mainly</li>
+                    <li>Designed Carlton bookcase</li>
+                </ul>
+
+                <h3><b>Example: </b>Carlton bookcase</h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr><hr></h2>
                 </div>
+
             </div>
         </div>
 
