--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -246,7 +246,34 @@
                 <div class="notes-content-subheader">
                     <h2><hr>Graphs and Charts<hr></h2>
                 </div>
-                <h3><b>Coming soon</b></h3>
+
+                <div class="notes-content-subheader">
+                    <h2><hr>Surface area/Volume<hr></h2>
+                </div>
+                <h3><b>Question 1)</b></h3>
+                <p>The table shows the test scores for a class. Using a cumulative frequency curve estimate the number of scores greater than 65.</p>
+
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/Graph_Question_1.png" alt="Diagram of shape dimensions">
+                </div>
+
+                <div class="worked-example">
+                    <p><b>Step 1) Calculate the cumulative frequency in the table:</b></p>
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/Graph_Question_1.1.png" alt="Diagram of shape dimensions">
+                    </div>
+                    
+                    <p><b>Step 2) Draw a cumulative frequency graph</b></p>
+                <div class="notes-content-picture" >
+                    <img src="../../../images/notes_pages_images/Graph_Question_1.2.png" alt="Diagram of shape dimensions">
+                </div>
+
+                    <p><b>Step 3) Calculate number of scores above 65:</b></p>
+                    <div class="notes-content-picture" >
+                        <img src="../../../images/notes_pages_images/Graph_Question_1.3.png" alt="Diagram of shape dimensions">
+                    </div>
+                </div>
+                <p>Total scores above 65 = 63 - 30 (From graph) = 33 scores</p>
                 
                 <div class="notes-content-subheader">
                     <h2><hr>Coordinates and Geometry<hr></h2>
