--- a/notes/notes_topics/MathematicsForD&T.html
+++ b/notes/notes_topics/MathematicsForD&T.html
@@ -71,16 +71,24 @@
             </div>
         </header>
         <div class="quote">
-            <h2>Mathematics</h2>
+            <h2>Mathematics for Design & Technology</h2>
         </div>
         <div class="content-wrapper">
-             <div class="portfolio-items-wrapper-notes_single">
+             <div class="portfolio-items-wrapper-notes">
 
+                <div class="portfolio-item-wrapper-notes">
+                    <div class="portfolio-img-background-notes" style="background-image:url(../../images/maths_worked_examples.jpg);  background-size: cover; background-position: center center;"></div>
+                    <div class="img-text-wrapper-notes">
+                        <div class="blurbox">
+                            <a href="notes_pages\maths_notes.html">Worked Examples</a>
+                        </div>
+                    </div>
+                </div>
                 <div class="portfolio-item-wrapper-notes">
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/mathsforDT.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="notes_pages\maths_notes.html">Mathematics for Design & Technology</a>
+                            <a href="notes_pages\maths_equations.html">Essential Equations for DT</a>
                         </div>
                     </div>
                 </div>
