--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -170,16 +170,16 @@
                     <h2><hr>Ratio<hr></h2>
                 </div>
                 <h3><b>Question 1)</b></h3>
-                <p>A kayak manufactuer is using epoxy resin to bond the fibre glass layers together in the kayak design.</p>
+                <p>A kayak manufactuer is using epoxy adhesive to bond the fibre glass layers together in the kayak design.</p>
                 <ul>
                     <li>The kayak will require 5.3m<sup>2</sup> of fibreglass</li>
-                    <li>5 litres of Epoxy resin is needed per metre squared</li>
-                    <li>The ratio of resin to hardener for the epoxy resin is 3:4</li>
+                    <li>5 litres of Epoxy adhesive is needed per metre squared</li>
+                    <li>The ratio of resin to hardener for the epoxy adhesive is 3:4</li>
                 </ul>
                 <p>Calculate the volume of hardener needed for 100 kayaks.</p>
 
                 <div class="worked-example">
-                    <p><b>Step 1) Calculate the amount of epoxy resin needed for 1 kayak:</b></p>
+                    <p><b>Step 1) Calculate the amount of epoxy adhesive needed for 1 kayak:</b></p>
                     <em>Epoxy resin needed = 5.3 x 5 = 26.5 litres</em>
                     
                     <p><b>Step 2) Calculate the amount of hardener needed:</b></p>
