--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -287,7 +287,7 @@
                     
                 </div>
                 <h3><b>Question 2)</b></h3>
-                <p>The manufacturer of engine has three quality control checks to perform. Given that 50,000 parts are made in a day. How many parts fail in a working week. A part fails the quality control check if all 3 tests fail together. </p>
+                <p>The manufacturer of engine has three quality control checks to perform. Given that 50,000 parts are made in a day. How many parts fail in a working week (5 days). A part fails the quality control check if all 3 tests fail together. </p>
                 <ul>
                     <li>Probability of test A failing = 0.01</li>
                     <li>Probability of test B failing = 0.03</li>
@@ -311,13 +311,14 @@
                 </div>
 
                 <h3><b>Question 4)</b></h3>
-                <p>Following on from question 3, how many students are needed in a class before it is likely the teacher will be sacked </p>
+                <p>Following on from question 3, how many more students are needed in the class before it is likely the teacher will be sacked </p>
         
                 <div class="worked-example">
                     <p><b>Step 1) Calculate the number of students needed until 3 fail:</b></p>
                     <p> 3 Fails = x (number of students in class) x 0.05</p>
                     <p><b>Step 2) Solve for x (number of students in class):</b></p>
                     <p> x = <sup>3</sup>&frasl;<sub>0.5</sub> = 60 students</p>
+                    <P>So an extra 10 are needed</P>
 
                 </div>
 
