--- a/notes/notes_topics/notes_pages/maths_notes.html
+++ b/notes/notes_topics/notes_pages/maths_notes.html
@@ -318,7 +318,7 @@
                     <p> 3 Fails = x (number of students in class) x 0.05</p>
                     <p><b>Step 2) Solve for x (number of students in class):</b></p>
                     <p> x = <sup>3</sup>&frasl;<sub>0.5</sub> = 60 students</p>
-                    <P>So an extra 10 are needed</P>
+                    <P>So an extra 10 students are needed</P>
 
                 </div>
 
