Design era added

--- a/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
+++ b/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
@@ -99,26 +99,29 @@
                 <h3><b><u>Arts & Crafts (William Morris):</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>Fitness for purpose</li>
+                    <li>Form follows function</li>
                     <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
+                    <li>Aimed to be affordable</li>
+                    <li>Return to designer - craftman as a reaction against industrialism</li>
                     <li>UK origins</li>
+                    <li>High quality products that could be handed down through generations</li>
                     <li>Reaction to loss of traditional skills</li>
                 </ul>
                 <h3>Design style:</h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>Simplicity</li>
+                    <li>Natural forms and natural materials</li>
+                    <li>Flower patterns</li>
+                    <li>Showing joints/grain</li>
+                    <li>Bespoke</li>
                 </ul>
                 <h3>Art & Crafts figure - <b>William Morris</b>:</h3>
                 <ul style="font-size: medium;">
-                    <li>Fitness for purpose</li>
-                    <li>Honesty in design</li>
-                    <li>Return to designer-craftman as a reaction against industrialism</li>
-                    <li>UK origins</li>
-                    <li>Reaction to loss of traditional skills</li>
+                    <li>Socialist</li>
+                    <li>Poet/writer/designer/innovator</li>
+                    <li>Famous for wallpapers</li>
+                    <li>Against the machine ages</li>
+                    <li>Examples of his work include the Red House</li>
                 </ul>
 
                 <h3><b>Example: </b>The Red House</h3>
@@ -132,13 +135,16 @@
                     <li>Languid lines</li>
                     <li>Formulation of new aesthetic values for a new urban lifestyle</li>
                     <li>French origins</li>
+                    <li>Embraced new technology of the time</li>
+                    <li>Form expressed through products function</li>
                 </ul>
                 <h3>Design style:</h3>
                 <ul style="font-size: medium;">
                     <li>Curvy 'whiplash' lines</li>
                     <li>Stylised flowers</li>
+                    <li>Natural forms</li>
                     <li>Languid feminine form</li>
-                    <li>Based on leaves/flowers</li>
+                    <li>Based on leaves/flowers/exotic insects/peacock feathers</li>
                 </ul>
                 <h3>Art Nouveau figure - <b>Charles Rennie Mackintosh</b>:</h3>
                 <ul style="font-size: medium;">
@@ -191,6 +197,7 @@
                     <li>Growth of mass production</li>
                     <li>Mass production/machine made</li>
                     <li>New materials/modern materials used for the first time</li>
+                    <li>Use of affordable materials</li>
                 </ul>
                 <h3>Design style:</h3>
                 <ul style="font-size: medium;">
@@ -283,11 +290,15 @@
                     <li>Originated in Italy</li>
                     <li>Reaction to functional modernism</li>
                     <li>Form over function</li>
+                    <li>Sometimes called 'New International Style'</li>
+                    <li>Made consumers think about design</li>
+                    <li>Didn't appeal to consumers with tradational/conservative taste</li>
                 </ul>
                 <h3>Design style:</h3>
                 <ul style="font-size: medium;">
                     <li>Silly & Eccentric</li>
                     <li>Bold/vibrant</li>
+                    <li>Influenced by Indian/Aztec art</li>
                     <li>'Retro design' (Carlton bookcase has Aztec shapes)</li>
                     <li>Distorted shapes</li>
                     <li>Promotes use of plastic</li>
