Capitalise textiles name

--- a/notes/notes_topics/materialsnotes.html
+++ b/notes/notes_topics/materialsnotes.html
@@ -125,7 +125,7 @@
                     <div class="portfolio-img-background-notes" style="background-image:url(../../images/matnote6.jpg)"></div>
                     <div class="img-text-wrapper-notes">
                         <div class="blurbox">
-                            <a href="..\..\documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">textiles</a>
+                            <a href="..\..\documents\1. Materials\DTBase_Materials_PapersAndBoards.pdf">Textiles</a>
                         </div>
                     </div>
                 </div>
